--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-665.9KB/s(Youtube:不良林), server: 54.179.88.143, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇨🇳 中国-315.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇺🇸 美国-192.5KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-351.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-638.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-308.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-2.99MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.23MB/s(Youtube:不良林), server: 18.140.1.222, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇨🇳 中国-665.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-568.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-475.6KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-339.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-665.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-568.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-665.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-568.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-665.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-568.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-665.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-568.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-665.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-568.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-665.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-568.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-315.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-665.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-568.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
