--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: 192.210.206.50, port: 11188, type: vmess, uuid: de0ff7f6-370e-41c9-c24a-b932c7c1ad58, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 192.210.206.50}}
-  - {name: 🇨🇳 中国-614.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-301.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.32MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-401.6KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-2.10MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-402.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-376.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-385.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-454.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-937.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-818.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-512.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-361.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 未知国家-2.20MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇺🇸 美国-19.94MB/s(Youtube:不良林), server: azhk.sharecentre.xyz, port: 58975, type: vmess, uuid: f0e9aff1-ba59-4af4-f3a1-6d17fffb4aca, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /Sharecentrepro, ws-headers: {Host: azhk.sharecentre.xyz}}
+  - {name: 未知国家-726.7KB/s(Youtube:不良林), server: 103.182.17.46, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.182.17.46}}
+  - {name: 🇨🇳 中国-515.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65069, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-369.7KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65042, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-614.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
+      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
+      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-614.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
+      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
+      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-614.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
+      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
+      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-614.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
+      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
+      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-614.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
+      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
+      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-614.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
+      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
+      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-614.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-402.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
+      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
+      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
