--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-454.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-937.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-818.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-512.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-361.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 未知国家-2.20MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-401.6KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.26MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-19.94MB/s(Youtube:不良林), server: azhk.sharecentre.xyz, port: 58975, type: vmess, uuid: f0e9aff1-ba59-4af4-f3a1-6d17fffb4aca, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /Sharecentrepro, ws-headers: {Host: azhk.sharecentre.xyz}}
-  - {name: 未知国家-726.7KB/s(Youtube:不良林), server: 103.182.17.46, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.182.17.46}}
+  - {name: 🇨🇳 中国-280.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 🇨🇳 中国-515.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65069, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-369.7KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65042, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-372.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-480.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-453.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-3.67MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 未知国家-5.21MB/s(Youtube:不良林), server: 103.186.148.113, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.186.148.113}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 未知国家-5.21MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 未知国家-5.21MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 未知国家-5.21MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 未知国家-5.21MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 未知国家-5.21MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 未知国家-5.21MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-454.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-937.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-818.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.7KB/s(Youtube:不良林)
-      - 未知国家-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-19.94MB/s(Youtube:不良林)
-      - 未知国家-726.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-515.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 未知国家-5.21MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
